# buddy-engine

./: CMakeLists.txt  Dockerfile  HelloTriangle.cpp  HelloTriangle.h  I was here.  InitHelper.cpp  InitHelper.h  LEE > LUIS  LICENSE  README.md  main.cpp  make_project
.devcontainer/: devcontainer.json
include/: HelloTriangle.h  InitHelper.h  buddy_engine_config.hpp.in
src/: HelloTriangle.cpp  HelloTriangle.h  InitHelper.cpp  main.cpp
src/shaders/: compile.bat  compile.sh  shader.frag  shader.vert
